--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,12 @@ services:
       - HA_DB_USER_NAME=${HA_DB_USER_NAME}
       - HA_DB_PASSWORD=${HA_DB_PASSWORD}
       - PYTHONPATH=/workspaces/batterymanager
+      - WATCHFILES_FORCE_POLLING=true
     ports:
       - "8080:8080"
     env_file:
-      - .env      
+      - .env
+    command: python3 /app/watch.py
     restart: unless-stopped
     networks:
       - bess-network
