--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ exclude = '''
 
 [tool.ruff]
 line-length = 88
-select = [
+lint.select = [
     "E",  # pycodestyle errors
     "F",  # pyflakes
     "I",  # isort
@@ -29,7 +29,7 @@ select = [
     "RUF", # Ruff-specific rules
     "G",  # flake8-logging-format
 ]
-ignore = [
+lint.ignore = [
     "E501",  # line too long - Let black handle line length
     "G004",  # Logging statement uses f-string (conflicts with Home Assistant policy)
 ]
@@ -44,7 +44,7 @@ exclude = [
 ]
 target-version = "py310"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["core", "app"]
 
 [tool.mypy]
