--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
