--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -43,39 +43,55 @@ options:
     additional_costs: 1.03           # överföringsavgift: 28.90 öre, energiskatt: 53.50 öre + 25% moms
     tax_reduction: 0.6518            # 60 öre skattereduktion + 5.18 öre förlustersättning
   sensors:
+    # === Battery Control & Status ===
     battery_soc: "sensor.rkm0d7n04x_statement_of_charge_soc"
-    battery_charge_power: "sensor.rkm0d7n04x_all_batteries_charge_power"
-    battery_discharge_power: "sensor.rkm0d7n04x_all_batteries_discharged_power"
     battery_charge_stop_soc: "number.rkm0d7n04x_charge_stop_soc"
     battery_discharge_stop_soc: "number.rkm0d7n04x_discharge_stop_soc"
     battery_charging_power_rate: "number.rkm0d7n04x_charging_power_rate"
     battery_discharging_power_rate: "number.rkm0d7n04x_discharging_power_rate"
-    grid_charge: "switch.rkm0d7n04x_charge_from_grid"
+    grid_charge: "switch.rkm0d7n04x_charge_from_grid"  
+    # === Real-time Power Sensors (Primary - Live Power Flow) ===
+    pv_power: "sensor.rkm0d7n04x_internal_wattage"                    # Total solar DC production
+    local_load_power: "sensor.rkm0d7n04x_local_load_power"           # Home consumption
+    import_power: "sensor.rkm0d7n04x_import_power"                   # Grid import
+    export_power: "sensor.rkm0d7n04x_export_power"                   # Grid export
+    battery_charge_power: "sensor.rkm0d7n04x_all_batteries_charge_power"     # Battery charging power
+    battery_discharge_power: "sensor.rkm0d7n04x_all_batteries_discharged_power"  # Battery discharging power 
+    # === Real-time Power Sensors (Advanced/Diagnostic - not required) ===
+    ac_power: "sensor.rkm0d7n04x_ac_power"                           # AC output from inverter
+    output_power: "sensor.rkm0d7n04x_output_power"                   # Output power (same as AC)
+    self_power: "sensor.rkm0d7n04x_self_power"                       # Solar contributing to AC loads
+    system_power: "sensor.rkm0d7n04x_system_power"                   # System power throughput 
+    # === Grid Current Monitoring (not required) ===
+    current_l1: "sensor.current_l1_gustavsgatan_32a"                 # Phase 1 current
+    current_l2: "sensor.current_l2_gustavsgatan_32a"                 # Phase 2 current
+    current_l3: "sensor.current_l3_gustavsgatan_32a"                 # Phase 3 current
+    # === Daily Energy Totals ===
+    solar_production_today: "sensor.rkm0d7n04x_solar_production_today"
+    load_consumption_today: "sensor.rkm0d7n04x_load_consumption_today"
+    self_consumption_today: "sensor.rkm0d7n04x_self_consumption_today"
+    import_from_grid_today: "sensor.rkm0d7n04x_import_from_grid_today"
+    export_to_grid_today: "sensor.rkm0d7n04x_export_to_grid_today"
     battery_charged_today: "sensor.rkm0d7n04x_all_batteries_charged_today"
     battery_discharged_today: "sensor.rkm0d7n04x_all_batteries_discharged_today"
-    solar_production_today: "sensor.rkm0d7n04x_solar_production_today"
-    self_consumption_today: "sensor.rkm0d7n04x_self_consumption_today"
-    export_to_grid_today: "sensor.rkm0d7n04x_export_to_grid_today"
-    load_consumption_today: "sensor.rkm0d7n04x_load_consumption_today"
-    import_from_grid_today: "sensor.rkm0d7n04x_import_from_grid_today"
     batteries_charged_from_grid_today: "sensor.rkm0d7n04x_batteries_charged_from_grid_today"
-    ev_energy_today: "sensor.zap263668_energy_meter"
-    current_l1: "sensor.current_l1_gustavsgatan_32a"
-    current_l2: "sensor.current_l2_gustavsgatan_32a"
-    current_l3: "sensor.current_l3_gustavsgatan_32a"
+    ev_energy_today: "sensor.zap263668_energy_meter"                 # EV charging energy
+    # === Lifetime Energy Totals ===
+    lifetime_solar_energy: "sensor.rkm0d7n04x_lifetime_total_solar_energy"
+    lifetime_load_consumption: "sensor.rkm0d7n04x_lifetime_total_load_consumption"
+    lifetime_self_consumption: "sensor.rkm0d7n04x_lifetime_self_consumption"
+    lifetime_import_from_grid: "sensor.rkm0d7n04x_lifetime_total_import_from_grid"
+    lifetime_export_to_grid: "sensor.rkm0d7n04x_lifetime_total_export_to_grid"
     lifetime_battery_charged: "sensor.rkm0d7n04x_lifetime_total_all_batteries_charged"
     lifetime_battery_discharged: "sensor.rkm0d7n04x_lifetime_total_all_batteries_discharged"
-    lifetime_solar_energy: "sensor.rkm0d7n04x_lifetime_total_solar_energy"
-    lifetime_export_to_grid: "sensor.rkm0d7n04x_lifetime_total_export_to_grid"
-    lifetime_load_consumption: "sensor.rkm0d7n04x_lifetime_total_load_consumption"
-    lifetime_import_from_grid: "sensor.rkm0d7n04x_lifetime_total_import_from_grid"
     lifetime_system_production: "sensor.rkm0d7n04x_lifetime_system_production"
-    lifetime_self_consumption: "sensor.rkm0d7n04x_lifetime_self_consumption"
-    nordpool_kwh_today: "sensor.nordpool_kwh_se4_sek_2_10_025"
-    nordpool_kwh_tomorrow: "sensor.nordpool_kwh_se4_sek_2_10_025"
-    48h_avg_grid_import: "sensor.48h_average_grid_import_power"
-    solar_forecast_today: "sensor.solcast_pv_forecast_forecast_today"
-    solar_forecast_tomorrow: "sensor.solcast_pv_forecast_forecast_tomorrow"
+    # === Electricity Pricing ===
+    nordpool_kwh_today: "sensor.nordpool_kwh_se4_sek_2_10_025"       # Today's NordPool prices
+    nordpool_kwh_tomorrow: "sensor.nordpool_kwh_se4_sek_2_10_025"    # Tomorrow's NordPool prices
+    # === Solar & Consumption Forecasting ===
+    48h_avg_grid_import: "sensor.48h_average_grid_import_power"       # 48h average consumption
+    solar_forecast_today: "sensor.solcast_pv_forecast_forecast_today" # Today's solar forecast
+    solar_forecast_tomorrow: "sensor.solcast_pv_forecast_forecast_tomorrow" # Tomorrow's solar forecast
 schema:
   influxdb:
     url: str
@@ -131,3 +147,11 @@ schema:
     48h_avg_grid_import: str
     solar_forecast_today: str
     solar_forecast_tomorrow: str
+    pv_power: str
+    local_load_power: str
+    import_power: str
+    export_power: str
+    ac_power: str
+    output_power: str
+    self_power: str
+    system_power: str
