--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -1,6 +1,6 @@
 name: "BESS Manager"
 description: "Battery Energy Storage System optimization and management"
-version: "2.2.1"
+version: "2.3.7"
 slug: "bess_manager"
 init: false
 arch:
@@ -42,6 +42,9 @@ options:
     vat_multiplier: 1.25             # 25% VAT
     additional_costs: 1.03           # överföringsavgift: 28.90 öre, energiskatt: 53.50 öre + 25% moms
     tax_reduction: 0.6518            # 60 öre skattereduktion + 5.18 öre förlustersättning
+  nordpool:
+    use_official_integration: true  # Set to true to use official HA Nord Pool integration
+    config_entry_id: "01K3Y99FD3MDZYVFX2XSWR4888"  # Required when use_official_integration is true
   sensors:
     # === Battery Control & Status ===
     battery_soc: "sensor.rkm0d7n04x_statement_of_charge_soc"
@@ -66,32 +69,22 @@ options:
     current_l1: "sensor.current_l1_gustavsgatan_32a"                 # Phase 1 current
     current_l2: "sensor.current_l2_gustavsgatan_32a"                 # Phase 2 current
     current_l3: "sensor.current_l3_gustavsgatan_32a"                 # Phase 3 current
-    # === Daily Energy Totals ===
-    solar_production_today: "sensor.rkm0d7n04x_solar_production_today"
-    load_consumption_today: "sensor.rkm0d7n04x_load_consumption_today"
-    self_consumption_today: "sensor.rkm0d7n04x_self_consumption_today"
-    import_from_grid_today: "sensor.rkm0d7n04x_import_from_grid_today"
-    export_to_grid_today: "sensor.rkm0d7n04x_export_to_grid_today"
-    battery_charged_today: "sensor.rkm0d7n04x_all_batteries_charged_today"
-    battery_discharged_today: "sensor.rkm0d7n04x_all_batteries_discharged_today"
-    batteries_charged_from_grid_today: "sensor.rkm0d7n04x_batteries_charged_from_grid_today"
-    ev_energy_today: "sensor.zap263668_energy_meter"                 # EV charging energy
     # === Lifetime Energy Totals ===
     lifetime_solar_energy: "sensor.rkm0d7n04x_lifetime_total_solar_energy"
     lifetime_load_consumption: "sensor.rkm0d7n04x_lifetime_total_load_consumption"
     lifetime_self_consumption: "sensor.rkm0d7n04x_lifetime_self_consumption"
-    lifetime_import_from_grid: "sensor.rkm0d7n04x_lifetime_total_import_from_grid"
+    lifetime_import_from_grid: "sensor.rkm0d7n04x_lifetime_import_from_grid"
     lifetime_export_to_grid: "sensor.rkm0d7n04x_lifetime_total_export_to_grid"
     lifetime_battery_charged: "sensor.rkm0d7n04x_lifetime_total_all_batteries_charged"
     lifetime_battery_discharged: "sensor.rkm0d7n04x_lifetime_total_all_batteries_discharged"
     lifetime_system_production: "sensor.rkm0d7n04x_lifetime_system_production"
+    ev_energy_meter: "sensor.zap263668_energy_meter"                 # EV charging energy (lifetime)
     # === Electricity Pricing ===
     nordpool_kwh_today: "sensor.nordpool_kwh_se4_sek_2_10_025"       # Today's NordPool prices
     nordpool_kwh_tomorrow: "sensor.nordpool_kwh_se4_sek_2_10_025"    # Tomorrow's NordPool prices
     # === Solar & Consumption Forecasting ===
     48h_avg_grid_import: "sensor.48h_average_grid_import_power"       # 48h average consumption
     solar_forecast_today: "sensor.solcast_pv_forecast_forecast_today" # Today's solar forecast
-    solar_forecast_tomorrow: "sensor.solcast_pv_forecast_forecast_tomorrow" # Tomorrow's solar forecast
 schema:
   influxdb:
     url: str
@@ -113,6 +106,9 @@ schema:
     vat_multiplier: float
     additional_costs: float
     tax_reduction: float
+  nordpool:
+    use_official_integration: bool
+    config_entry_id: str
   sensors:
     battery_soc: str
     battery_charge_power: str
@@ -122,15 +118,6 @@ schema:
     battery_charging_power_rate: str
     battery_discharging_power_rate: str
     grid_charge: str
-    battery_charged_today: str
-    battery_discharged_today: str
-    solar_production_today: str
-    self_consumption_today: str
-    export_to_grid_today: str
-    load_consumption_today: str
-    import_from_grid_today: str
-    batteries_charged_from_grid_today: str
-    ev_energy_today: str
     current_l1: str
     current_l2: str
     current_l3: str
@@ -142,11 +129,11 @@ schema:
     lifetime_import_from_grid: str
     lifetime_system_production: str
     lifetime_self_consumption: str
+    ev_energy_meter: str
     nordpool_kwh_today: str
     nordpool_kwh_tomorrow: str
     48h_avg_grid_import: str
     solar_forecast_today: str
-    solar_forecast_tomorrow: str
     pv_power: str
     local_load_power: str
     import_power: str
