--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,11 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.10",
     "@types/react": "^19.1.8",
-    "@types/react-datepicker": "^6.2.0"
+    "@types/react-datepicker": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5"
   }
 }
