--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,10 +48,12 @@
     "@types/node": "^22.10.10",
     "@types/react": "^19.1.8",
     "@types/react-datepicker": "^6.2.0",
+    "@eslint/js": "^9.17.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.37.5"
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^15.14.0"
   }
 }
