--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,11 +11,13 @@
       "isolatedModules": true,
       "noEmit": true,
       "jsx": "react-jsx",
-      "strict": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "noFallthroughCasesInSwitch": true
+      "strict": false,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
+      "noFallthroughCasesInSwitch": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true
     },
-    "include": ["src"],
+    "include": ["src/**/*"],
     "references": [{ "path": "./tsconfig.node.json" }]
   }
