--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
@@ -49,6 +49,7 @@
     "@types/react": "^18.3.24",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.7",
+    "@types/recharts": "^1.8.29",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "eslint": "^9.17.0",
