--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -1,6 +1,6 @@
 name: "BESS Manager"
 description: "Battery Energy Storage System optimization and management"
-version: "2.3.11"
+version: "2.4.0"
 slug: "bess_manager"
 init: false
 arch:
@@ -48,21 +48,20 @@ options:
   sensors:
     # === Battery Control & Status ===
     battery_soc: "sensor.rkm0d7n04x_statement_of_charge_soc"
-    battery_charge_stop_soc: "number.rkm0d7n04x_charge_stop_soc"
-    battery_discharge_stop_soc: "number.rkm0d7n04x_discharge_stop_soc"
-    battery_charging_power_rate: "number.rkm0d7n04x_charging_power_rate"
-    battery_discharging_power_rate: "number.rkm0d7n04x_discharging_power_rate"
-    grid_charge: "switch.rkm0d7n04x_charge_from_grid"  
+    battery_charge_stop_soc: "number.rkm0d7n04x_charge_stop_soc_2"
+    battery_discharge_stop_soc: "number.rkm0d7n04x_discharge_stop_soc_2"
+    battery_charging_power_rate: "number.rkm0d7n04x_charge_power"
+    battery_discharging_power_rate: "number.rkm0d7n04x_discharge_power"
+    grid_charge: "switch.rkm0d7n04x_ac_charge"  
     # === Real-time Power Sensors (Primary - Live Power Flow) ===
     pv_power: "sensor.rkm0d7n04x_internal_wattage"                    # Total solar DC production
     local_load_power: "sensor.rkm0d7n04x_local_load_power"           # Home consumption
     import_power: "sensor.rkm0d7n04x_import_power"                   # Grid import
     export_power: "sensor.rkm0d7n04x_export_power"                   # Grid export
-    battery_charge_power: "sensor.rkm0d7n04x_all_batteries_charge_power"     # Battery charging power
-    battery_discharge_power: "sensor.rkm0d7n04x_all_batteries_discharged_power"  # Battery discharging power 
+    battery_charge_power: "sensor.rkm0d7n04x_battery_1_charging_w"     # Battery charging power
+    battery_discharge_power: "sensor.rkm0d7n04x_battery_1_discharging_w"  # Battery discharging power 
     # === Real-time Power Sensors (Advanced/Diagnostic - not required) ===
-    ac_power: "sensor.rkm0d7n04x_ac_power"                           # AC output from inverter
-    output_power: "sensor.rkm0d7n04x_output_power"                   # Output power (same as AC)
+    output_power: "sensor.rkm0d7n04x_output_power"                   # Output power
     self_power: "sensor.rkm0d7n04x_self_power"                       # Solar contributing to AC loads
     system_power: "sensor.rkm0d7n04x_system_power"                   # System power throughput 
     # === Grid Current Monitoring (not required) ===
