Fix config.yaml schema - add missing currency field
The currency field was defined in the options section but missing from
the schema section, causing Home Assistant to strip it during validation.
This prevented all settings from being applied properly.

Changes:
- Add currency: str to home section in schema
- Bump version to 2.5.6

Fixes settings not updating when config.yaml is modified.

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "BESS Manager"
 description: "Battery Energy Storage System optimization and management"
-version: "2.5.5"
+version: "2.5.6"
 slug: "bess_manager"
 init: false
 arch:
@@ -92,6 +92,7 @@ schema:
     password: str
   home:
     consumption: float
+    currency: str
     max_fuse_current: int
     voltage: int
     safety_margin_factor: float
