--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "BESS Manager"
 description: "Battery Energy Storage System optimization and management"
-version: "2.5.7"
+version: "3.0.1"
 slug: "bess_manager"
 init: false
 arch:
@@ -34,9 +34,11 @@ options:
     safety_margin_factor: 0.95      # Safety margin for power calculations (95%)
   battery:
     total_capacity: 30.0             # kWh
+    min_soc: 15                      # Minimum state of charge (%) - synced to inverter on startup
+    max_soc: 95                      # Maximum state of charge (%) - synced to inverter on startup
     max_charge_discharge_power: 15.0 # kW
     cycle_cost: 0.50                 # Battery wear cost per kWh (excl. VAT) - use your local currency
-    min_action_profit_threshold: 1.5  # Minimum profit threshold for any battery action (in your currency)
+    min_action_profit_threshold: 5.0 # Minimum profit threshold for any battery action (in your currency)
   electricity_price:
     area: "SE4"                      # Area for Nordpool pricing
     markup_rate: 0.08                # Electricity markup per kWh (in your currency, e.g. 8 öre/kWh for SEK)
@@ -98,6 +100,8 @@ schema:
     safety_margin_factor: float
   battery:
     total_capacity: float
+    min_soc: float
+    max_soc: float
     max_charge_discharge_power: float
     cycle_cost: float
     min_action_profit_threshold: float
