Adds influxdb bucket configurable by end user in config.yaml

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ HA_URL=http://homeassistant.local:8123
 HA_TOKEN="YOUR LONG LIVED TOKEN FOR YOUR PROD HOME ASSISTANT HERE (WITHOUT QUOTES)"
 
 HA_DB_URL=http://homeassistant.local:8086/api/v2/query
+HA_DB_BUCKET=homeassistant/autogen
 HA_DB_USER_NAME="YOUR DB USERNAME HERE"
 HA_DB_PASSWORD="YOUR DB PASSWORD HERE"
 
