--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,11 +50,12 @@
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.7",
     "@types/recharts": "^1.8.29",
-    "@typescript-eslint/eslint-plugin": "^8.40.0",
-    "@typescript-eslint/parser": "^8.40.0",
-    "eslint": "^9.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^15.14.0"
+    "globals": "^15.14.0",
+    "prettier": "^3.8.1"
   }
 }
